--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
     <string name="app_name">Popular Movies Stage 1</string>
+    <string name="sort">Popular Movies Sort</string>
+    <string name="API">2bfc2845a8e711f212828a7f8d23d3a7</string>
+    <string name="popularity">Popularity</string>
+    <string name="toprated">Top Rated</string>
+    <string name="MovieDB_URL">"http://api.themoviedb.org/3/movie/popular?api_key="</string>
+    <string name="MovieDB_URL2">"http://api.themoviedb.org/3/movie/top_rated?api_key="</string>
+
+
 </resources>
